# clif

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
clif/: __init__.py  _keccak.py  autostate.py  calldata.py  claimer.py  cli.py  config.py  credentials.py  discovery.py  epoch_auto.py  fsp.py  fsp_autostate.py  fsp_calldata.py  fwd_client.py  merkle.py  models.py  reward_data.py  rpc.py  signing_progress.py
docs/: clifctl-smoke-test.md  decisions.md  fsp-signing-tool-spec.md  fwd-contract.md  fwd-integration-spec.md  onchain-migration.md  phase8b-spec.md  verification.md
install/: clifctl  install.sh
tests/: test_autostate.py  test_calldata.py  test_capabilities.py  test_chain_nonce.py  test_claimer.py  test_config.py  test_doctor.py  test_epoch_auto.py  test_fsp.py  test_fsp_calldata.py  test_fsp_config.py  test_fsp_fwd_client.py  test_fsp_integration_oracle.py  test_fsp_keyless.py  test_fwd_client.py  test_import_credentials.py  test_keccak.py  test_merkle.py  test_models.py  test_network_resolver.py  test_rehearse.py  test_signing_progress.py
