[tool.poetry]
name = "clif"
version = "0.5.17"
description = "Keyless FTSO v2 reward claimer and FSP signer for Flare networks"
authors = ["African Proofs <dev@proofs.africa>"]
readme = "README.md"
packages = [{include = "clif"}]

[tool.poetry.scripts]
clif = "clif.cli:app"

[tool.poetry.dependencies]
python = "^3.12"
# CLI
typer = {version = "^0.15", extras = ["all"]}
rich = "^13.9"
# HTTP — RPC, fwd, fsp-rewards fetch
httpx = ">=0.27,<0.29"
# ABI calldata encoding (endorsed by docs/phase8b-spec.md).
# NOTE: deliberately NO eth-account / eth-keys / pycryptodome / web3 /
# argon2 — those are local-signing signals and are forbidden for clif
# (fwd Core invariant #7). keccak-256 is vendored (clif/_keccak.py) so
# no eth-hash backend (pycryptodome) is pulled in transitively.
eth-abi = "^5.0"
# Data
pydantic = "^2.10"
pydantic-settings = "^2.6"
# Shared fwd HTTP transport (pure httpx+pydantic; no crypto dep).
fwd-client = {git = "https://github.com/africanproofs/fwd-client.git", tag = "v0.1.1", subdirectory = "python"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
ruff = "^0.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 100

[[tool.mypy.overrides]]
module = "fwd_client"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fwd_client.*"
ignore_missing_imports = true
